--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       window.process = { env: { NODE_ENV: 'production' } };
       window.global = window;
     </script>
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script src="https://www.google.com/recaptcha/api.js?onload=onRecaptchaLoad&render=explicit" async defer></script>
 <script type="importmap">
 {
   "imports": {
